--- a/debian/rules
+++ b/debian/rules
@@ -11,11 +11,16 @@
 # build-arch and build-indep targets  by Bill Allombert 2001
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
+#override_dh_auto_build override_dh_auto_install:
+#	@
+
+override_dh_auto_install:
+	$(MAKE) DESTDIR=$$(pwd)/debian/ustun PREFIX=/usr install
 
 %:
-	dh $@ 
+	dh $@
